# RayTracing_SPPM

./: .gitignore  report.md
code/: CMakeLists.txt  run_all.sh
code/include/: PM.hpp  SPPM.hpp  camera.hpp  group.hpp  hit.hpp  material.hpp  object3d.hpp  ray.hpp  scene_parser.hpp  transform.hpp
code/include/objects/: box.hpp  curve.hpp  light.hpp  mesh.hpp  plane.hpp  plate.hpp  revsurface.hpp  sphere.hpp  square.hpp  triangle.hpp
code/src/: main.cpp  scene_parser.cpp
code/testcases/: CornellBox.txt  CornellBox_cup.txt  directLight.txt  rabbit_and_cup.txt  scene01_basic.txt  scene02_cube.txt  scene06_bunny_1k.txt  sorry_rabbit copy.txt  sorry_rabbit.txt  textured_walls.txt
